<resources>
    <string name="app_name">eKnowledge</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">Map</string>
    <string name="title_activity_home__menu_">Home_Menu_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_home">Our Courses</string>
    <string name="menu_postcourse">Post a Course</string>
    <string name="menu_about">About</string>
    <string name="menu_mycourses">My Courses</string>
    <string name="menu_save">Saved Courses</string>
    <string name="menu_updateprofile">Update Profile</string>
    <string name="menu_logout">Log Out</string>
</resources>