<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/home"
                android:title="@string/menu_dashboard" />
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ourcourses"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_mycourse"
                android:icon="@drawable/bookcollection"
                android:title="@string/menu_mycourses"/>
            <item
                android:id="@+id/nav_savedcourse"
                android:icon="@drawable/savebook"
                android:title="@string/menu_save"/>
            <item
                android:id="@+id/nav_postcourse"
                android:icon="@drawable/post"
                android:title="@string/menu_postcourse" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/aboutus"
                android:title="@string/menu_about" />

        </group>
    </item>

    <item android:title="Profile Details">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/person"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_updateprofile"
                    android:icon="@drawable/update"
                    android:title="@string/menu_updateprofile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/login"
                    android:title="@string/menu_logout" />
            </group>

        </menu>
    </item>

</menu>